Change title for Chess JS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </script>
   </head>
   <body>
-    <h1>Deep blue version JS</h1>
-    <center><canvas id='screen' width='400' height='400' >JavaScript est nécessaire ...</canvas></center>
+    <center><h1>Chess JS</h1>
+   <canvas id='screen' width='400' height='400' >JavaScript est nécessaire ...</canvas></center>
   </body>
 </html>
