Moving some code, usefull for next step : networking

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+  <script type='text/javascript' src='pieces.js'>
+  </script>
+  <script type='text/javascript' src='core_game.js'>
+  </script>
   <script type='text/javascript' src='script.js'>
     </script>
   </head>
